--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +18,7 @@
 <body>
     <header class="header">
         <div class="header-container container">
-            <a class="logo link" lang="en" href="./index.html"><span class="accent">Web</span><span
+            <a class="header-logo logo link" lang="en" href="./index.html"><span class="accent">Web</span><span
                     class="upper-logo">Studio</span></a>
             <nav class="navigation">
                 <ul class="header-nav-list list">
@@ -29,10 +28,20 @@
                 </ul>
             </nav>
             <ul class="header-contact-list list">
-                <li class="header-contact-list-item"><a class="upper-contact-mail link"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-contact-list-item"><a class="upper-contact-number link" href="tel:+380961111111">+38 096 111 11
-                        11</a></li>
+                <li class="header-contact-list-item">
+                    <a class="upper-contact-mail link" href="mailto:info@devstudio.com">
+                        <svg class="icon-envelope" width="16" height="12">
+                            <use href="./images/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com
+                    </a>
+                </li>
+                <li class="header-contact-list-item">
+                    <a class="upper-contact-number link" href="tel:+380961111111">
+                        <svg class="icon-smartphone" width="10" height="16">
+                            <use href="./images/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
+                </li>
             </ul>
         </div>
     </header>
@@ -40,7 +49,7 @@
         <!-- Portfolio main section -->
         <section class="portfolio-main-section section">
             <div class="container">
-                <h1 class="portfolio-main-title" hidden>Работы нашей студии</h1>
+                <h1 class="portfolio-main-title-hidden">Работы нашей студии</h1>
                 <ul class="portfolio-main-list list">
                     <li class="portfolio-main-item">
                         <button class="portfolio-btn" type="button">Все</button>
@@ -59,71 +68,88 @@
                     </li>
                 </ul>
                 <!-- Work examples -->
-                <h2 class="work-examples-title" hidden>Примеры наших работ</h2>
+                <h2 class="work-examples-title-hidden">Примеры наших работ</h2>
                 <ul class="work-examples-list list">
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img1.jpg" alt="Лэптоп" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Технокряк</h3>
-                            <p class="work-exemples-text">Веб-сайт</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img1.jpg" alt="Лэптоп" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Технокряк</h3>
+                                <p class="work-exemples-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img2.jpg" alt="Игра в баскетбол" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                            <p class="work-exemples-text">Дизайн</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img2.jpg" alt="Игра в баскетбол" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                                <p class="work-exemples-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img3.jpg" alt="Логотип ресторана" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Ресторан <span lang="en">Seafood</span></h3>
-                            <p class="work-exemples-text">Приложение</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img3.jpg" alt="Логотип ресторана" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Ресторан <span lang="en">Seafood</span></h3>
+                                <p class="work-exemples-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img4.jpg" alt="Наушники" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Проект <span lang="en">Prime</span></h3>
-                            <p class="work-exemples-text">Маркетинг</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img4.jpg" alt="Наушники" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Проект <span lang="en">Prime</span></h3>
+                                <p class="work-exemples-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img5.jpg" alt="Коробки" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Проект <span lang="en">Boxes</span></h3>
-                            <p class="work-exemples-text">Приложение</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img5.jpg" alt="Коробки" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Проект <span lang="en">Boxes</span></h3>
+                                <p class="work-exemples-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img6.jpg" alt="Монитор" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption" lang="en">Inspiration has no Borders</h3>
-                            <p class="work-exemples-text">Веб-сайт</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img6.jpg" alt="Монитор" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption" lang="en">Inspiration has no Borders</h3>
+                                <p class="work-exemples-text">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img7.jpg" alt="Журнал" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Издание <span lang="en">Limited Edition</span></h3>
-                            <p class="work-exemples-text">Дизайн</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img7.jpg" alt="Журнал" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Издание <span lang="en">Limited Edition</span></h3>
+                                <p class="work-exemples-text">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img8.jpg" alt="Бирка" width="370" height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption">Проект <span lang="en">LAB</span></h3>
-                            <p class="work-exemples-text">Маркетинг</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img8.jpg" alt="Бирка" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption">Проект <span lang="en">LAB</span></h3>
+                                <p class="work-exemples-text">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="work-examples-item">
-                        <img class="work-examples-img" src="./images/works_img9.jpg" alt="Робота за компьютером" width="370"
-                            height="294">
-                        <div class="work-examples-container">
-                            <h3 class="work-examples-caption" lang="en">Growing Business</h3>
-                            <p class="work-exemples-text">Приложение</p>
-                        </div>
+                        <a class="work-examples-link link" href="">
+                            <img class="work-examples-img" src="./images/works_img9.jpg" alt="Робота за компьютером" width="370" height="294">
+                            <div class="work-examples-container">
+                                <h3 class="work-examples-caption" lang="en">Growing Business</h3>
+                                <p class="work-exemples-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -131,25 +157,63 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <a class="logo link" lang="en" href="./index.html"><span class="accent">Web</span><span
-                    class="lower-logo">Studio</span></a>
-            <address class="address">
-                <ul class="contact-list list">
-                    <li class="contact-list-item">
-                        <a class="contact-list-link link" href="https://goo.gl/maps/PiAsMLSMwNSQbQ9v8" target="_blank"
-                            rel="noopener noreferrer">г. Киев,
-                            пр-т Леси
-                            Украинки,26</a>
+        <div class="footer-container container">
+            <div class="footer-contact-container">
+                <a class="logo link" lang="en" href="./index.html"><span class="accent">Web</span><span
+                        class="lower-logo">Studio</span></a>
+                <address class="address">
+                    <ul class="contact-list list">
+                        <li class="contact-list-item">
+                            <a class="contact-list-link link" href="https://goo.gl/maps/PiAsMLSMwNSQbQ9v8" target="_blank"
+                                rel="noopener noreferrer">г. Киев, пр-т Леси
+                                Украинки,26</a>
+                        </li>
+                        <li class="contact-list-item">
+                            <a class="lower-contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                        <li class="contact-list-item">
+                            <a class="lower-contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-social-container">
+                <h3 class="footer-social-title">присоединяйтесь</h3>
+                <ul class="footer-social-list list">
+                    <li class="footer-social-list-item">
+                        <a class="footer-social-list-link link" href="https://www.instagram.com" target="_blank"
+                            rel="noreferrer noopener">
+                            <svg class="footer-social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a class="lower-contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="footer-social-list-item">
+                        <a class="footer-social-list-link link" href="https://twitter.com/" target="_blank"
+                            rel="noreferrer noopener">
+                            <svg class="footer-social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a class="lower-contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="footer-social-list-item">
+                        <a class="footer-social-list-link link" href="https://uk-ua.facebook.com" target="_blank"
+                            rel="noreferrer noopener">
+                            <svg class="footer-social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-list-item">
+                        <a class="footer-social-list-link link" href="https://ru.linkedin.com/" target="_blank"
+                            rel="noreferrer noopener">
+                            <svg class="footer-social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
